--- a/src/pages/components/authentication/sign-in.mdx
+++ b/src/pages/components/authentication/sign-in.mdx
@@ -1,12 +1,18 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
-import {Images} from '@/components/Images'
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
 
 # `<SignIn />`
+
 ---
 
-<Images width={496} height={564} src="/images/ui-components/component-sign_in.svg" alt="Sign in component example"/>
+<Images
+  width={496}
+  height={564}
+  src="/images/ui-components/component-sign_in.svg"
+  alt="Sign in component example"
+/>
 
 The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
@@ -21,7 +27,7 @@ Below is basic implementation of the `<SignIn/>` component. You can use this as 
 import { SignIn } from "@clerk/nextjs";
 
 const SignInPage = () => (
-  <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
+<SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
 );
 export default SignInPage;
 ```
@@ -36,6 +42,7 @@ function SignInPage() {
   return <SignIn />;
 }
 ```
+
 Below is an example that uses path-based routing to mount the `<SignIn/>` component under the "/sign-in" path. The Clerk React snippet uses the popular React Router library, but it can be easily adapted to use the routing library of your choice.
 
 ```jsx copy filename="App.js"
@@ -82,8 +89,8 @@ function App() {
 }
 export default App;
 ```
-
 </Tab>
+
 <Tab>
 ```jsx copy filename="app/routes/sign-in/$.tsx"
 import { SignIn } from "@clerk/remix";
@@ -125,23 +132,50 @@ window.Clerk.openSignIn();
 
 All props below are optional.
 
-<Tables headings={["Name", "Type", "Description"]} rows={[
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
     {
-      cells: ["routing", "string",  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`]
+      cells: [
+        "routing",
+        "string",
+        `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
+      ],
     },
     {
-      cells: ["path", "string",  "The path where the component is mounted on when path-based routing is used e.g. /sign-in."]
+      cells: [
+        "path",
+        "string",
+        "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
+      ],
     },
     {
-      cells: ["redirectUrl", "string",  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
+      cells: [
+        "redirectUrl",
+        "string",
+        "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+      ],
     },
     {
-      cells: ["afterSignInUrl", "string",  "The full URL or path to navigate after a successful sign in."]
+      cells: [
+        "afterSignInUrl",
+        "string",
+        "The full URL or path to navigate after a successful sign in.",
+      ],
     },
-     {
-      cells: ["signUpUrl", "string",  "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered."]
+    {
+      cells: [
+        "signUpUrl",
+        "string",
+        "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered.",
+      ],
     },
-     {
-      cells: ["afterSignUpUrl", "string", "The full URL or path to navigate after a successful sign up."]
+    {
+      cells: [
+        "afterSignUpUrl",
+        "string",
+        "The full URL or path to navigate after a successful sign up.",
+      ],
     },
-  ]} />
+  ]}
+/>
