--- a/src/pages/components/authentication/user-profile.mdx
+++ b/src/pages/components/authentication/user-profile.mdx
@@ -4,11 +4,17 @@ import { Images } from "@/components/Images";
 
 # `<UserProfile />`
 
-<Images width={976} height={762} src="/images/ui-components/component-user_profile.svg" alt="UserProfile example"/>
+<Images
+  width={976}
+  height={762}
+  src="/images/ui-components/component-user_profile.svg"
+  alt="UserProfile example"
+/>
 
-The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. 
+The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 Using the [Next.js optional catch all route](https://nextjs.org/docs/routing/dynamic-routes#optional-catch-all-routes), you can embed the `<UserProfile/>` component. This allows you to redirect the user inside your application and handle any redirects.
@@ -22,13 +28,14 @@ const UserProfilePage = () => (
 
 export default UserProfilePage;
 ```
+
 </Tab>
 <Tab>
 ```jsx copy filename="/user-profile.tsx"
 import { UserProfile } from "@clerk/clerk-react";
 
 const UserProfilePage = () => (
-  <UserProfile path="/user-profile" routing="path" />
+<UserProfile path="/user-profile" routing="path" />
 );
 
 export default UserProfilePage;
