--- a/src/pages/components/user-management/authenticate-with-callback.mdx
+++ b/src/pages/components/user-management/authenticate-with-callback.mdx
@@ -1,28 +1,22 @@
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<AuthenticateWithRedirectCallback />`
+
 ---
 
 The `<AuthenticateWithRedirectCallback/>` is used to complete a custom OAuth flow. Simply render the component under the route you passed as `redirectUrl` to the `authenticateWithRedirect` methods.
 
 ## Usage
 
-
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 
 <Tab>
-This example below uses built in Next.js pages, but you could use any routing library you want. 
-
+This example below uses built in Next.js pages, but you could use any routing library you want.
 
 ```tsx copy filename="app.tsx"
-import '@/styles/globals.css'
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  useSignIn,
-} from "@clerk/nextjs";
+import "@/styles/globals.css";
+import { ClerkProvider, SignedIn, SignedOut, useSignIn } from "@clerk/nextjs";
 import { AppProps } from "next/app";
 import { useRouter } from "next/router";
 
@@ -40,11 +34,11 @@ const SignInOAuthButtons = () => {
       redirectUrlComplete: "/",
     });
   return <button onClick={signInWithGoogle}>Sign in with Google</button>;
-}
+};
 function MyApp({ Component, pageProps }: AppProps) {
   const { pathname } = useRouter();
   const isPublicPage = publicPages.includes(pathname);
-  
+
   return (
     <ClerkProvider {...pageProps}>
       {isPublicPage ? (
@@ -55,30 +49,30 @@ function MyApp({ Component, pageProps }: AppProps) {
             <Component {...pageProps} />
           </SignedIn>
           <SignedOut>
-           <SignInOAuthButtons />
+            <SignInOAuthButtons />
           </SignedOut>
         </>
       )}
     </ClerkProvider>
   );
 }
- 
+
 export default MyApp;
 ```
+
 Once you have implemented your sign in flow, you can implement the callback page.
 
 ```tsx copy filename="/pages/sso-callback.tsx"
 import { AuthenticateWithRedirectCallback } from "@clerk/nextjs";
 
 export default function SSOCallBack() {
-  return (
-   <AuthenticateWithRedirectCallback />
-  )
+  return <AuthenticateWithRedirectCallback />;
 }
 ```
+
 </Tab>
 <Tab>
-This example below is using the `react-router-dom` library. You can use any routing library you want. 
+This example below is using the `react-router-dom` library. You can use any routing library you want.
 
 ```tsx copy filename="app.tsx"
 import {
@@ -135,23 +129,42 @@ function SignInOAuthButtons() {
 }
 
 export default App;
-
 ```
+
 </Tab>
 </Tabs>
 ## Props
 
-<Tables headings={["Name", "Type","Description"]} rows={[
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
     {
-      cells: ["afterSignInUrl", "string","Full URL or path to navigate after successful sign in."]
+      cells: [
+        "afterSignInUrl",
+        "string",
+        "Full URL or path to navigate after successful sign in.",
+      ],
     },
     {
-      cells: ["afterSignUpUrl", "string","Full URL or path to navigate after successful sign up."]
+      cells: [
+        "afterSignUpUrl",
+        "string",
+        "Full URL or path to navigate after successful sign up.",
+      ],
     },
     {
-      cells: ["redirectUrl", "string", "Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value."]
+      cells: [
+        "redirectUrl",
+        "string",
+        "Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.",
+      ],
     },
     {
-      cells: ["secondFactorUrl", "string", "Full URL or path to navigate during sign in, if 2FA is enabled."]
+      cells: [
+        "secondFactorUrl",
+        "string",
+        "Full URL or path to navigate during sign in, if 2FA is enabled.",
+      ],
     },
-  ]} />
+  ]}
+/>
