--- a/src/pages/hooks/authentication/use-sign-in.mdx
+++ b/src/pages/hooks/authentication/use-sign-in.mdx
@@ -1,35 +1,29 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `useSignIn`
 
-The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows. 
-
+The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 #### Check the current sign in status
-
 
 ```tsx copy filename="pages/index.tsx"
 import { useSignIn } from "@clerk/nextjs";
 
 export default function SignInStep() {
   const { isLoaded, signIn } = useSignIn();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
   }
-  
-  return (
-    <div>
-      The current sign in attempt status 
-      is {signIn.status}.
-    </div>
-  );
+
+  return <div>The current sign in attempt status is {signIn.status}.</div>;
 }
 ```
 
@@ -58,11 +52,10 @@ export default function SignIn() {
       })
       .then((result) => {
         if (result.status === "complete") {
-            console.log(result);
-            setActive({session: result.createdSessionId});
-        }
-        else{
-            console.log(result);
+          console.log(result);
+          setActive({ session: result.createdSessionId });
+        } else {
+          console.log(result);
         }
       })
       .catch((err) => console.error("error", err.errors[0].longMessage));
@@ -93,28 +86,23 @@ export default function SignIn() {
   );
 }
 ```
+
 </Tab>
 <Tab>
 #### Check the current sign in status
-
 
 ```tsx copy filename="pages/sign-in-step.tsx"
 import { useSignIn } from "@clerk/clerk-react";
 
 export default function SignInStep() {
   const { isLoaded, signIn } = useSignIn();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
   }
-  
-  return (
-    <div>
-      The current sign in attempt status 
-      is {signIn.status}.
-    </div>
-  );
+
+  return <div>The current sign in attempt status is {signIn.status}.</div>;
 }
 ```
 
@@ -143,11 +131,10 @@ export default function SignIn() {
       })
       .then((result) => {
         if (result.status === "complete") {
-            console.log(result);
-            setActive({session: result.createdSessionId});
-        }
-        else{
-            console.log(result);
+          console.log(result);
+          setActive({ session: result.createdSessionId });
+        } else {
+          console.log(result);
         }
       })
       .catch((err) => console.error("error", err.errors[0].longMessage));
@@ -178,6 +165,7 @@ export default function SignIn() {
   );
 }
 ```
+
 </Tab>
 </Tabs>
 <Tables headings={["Variables", "Description"]} rows={[
