--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -1,7 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import {YouTube} from "@/components/Youtube"
-import {Images} from "@/components/Images";
+import { YouTube } from "@/components/Youtube";
+import { Images } from "@/components/Images";
 
 # Use Clerk with Expo
 
@@ -9,28 +9,28 @@ Learn how to use Clerk with Expo including protecting pages and retrieving user 
 
 ## Install @clerk/clerk-expo
 
-<Callout type='warning'>
-Currently Clerk only works with Expo SDK 47 or lower. We are working on supporting the latest Expo SDK.
+<Callout type="warning">
+  Currently Clerk only works with Expo SDK 47 or lower. We are working on
+  supporting the latest Expo SDK.
 </Callout>
 
-<Tabs items={['npm', 'yarn', 'pnpm']}>
-<Tab>
-```
-npm install @clerk/clerk-expo
-```
-</Tab>
-<Tab>
-```
-yarn add @clerk/clerk-expo
-```
-</Tab>
-<Tab>
-```
-pnpm i @clerk/clerk-expo
-```
-</Tab>
+<Tabs items={["npm", "yarn", "pnpm"]}>
+  <Tab>
+  ``` bash filename="your-project" copy
+  npm install @clerk/clerk-expo
+  ```
+  </Tab>
+  <Tab>
+   ``` bash filename="your-project" copy
+   yarn add @clerk/clerk-expo
+   ```
+   </Tab>
+  <Tab>
+  ``` bash filename="your-project" copy
+  pnpm i @clerk/clerk-expo
+  ```
+  </Tab>
 </Tabs>
-
 
 ## Configure `<ClerkProvider>`
 
@@ -38,7 +38,7 @@ Clerk requires your Expo application to be wrapped in the `<ClerkProvider/>` com
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { SafeAreaView, Text,StyleSheet } from "react-native";
+import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
 export default function App() {
@@ -54,30 +54,30 @@ export default function App() {
 const styles = StyleSheet.create({
   container: {
     flex: 1,
-    backgroundColor: '#fff',
-    alignItems: 'center',
-    justifyContent: 'center',
+    backgroundColor: "#fff",
+    alignItems: "center",
+    justifyContent: "center",
   },
 });
 ```
 
 ## Protecting Your Pages
 
-Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out)  control components.
+Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out) control components.
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { SafeAreaView, Text,StyleSheet } from "react-native";
+import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-     <SafeAreaView style={styles.container}>
-      <SignedIn>
-        <Text>You are Signed in</Text>
-      </SignedIn>
-      <SignedOut>You are Signed out</SignedOut>
+      <SafeAreaView style={styles.container}>
+        <SignedIn>
+          <Text>You are Signed in</Text>
+        </SignedIn>
+        <SignedOut>You are Signed out</SignedOut>
       </SafeAreaView>
     </ClerkProvider>
   );
@@ -86,9 +86,9 @@ export default function App() {
 const styles = StyleSheet.create({
   container: {
     flex: 1,
-    backgroundColor: '#fff',
-    alignItems: 'center',
-    justifyContent: 'center',
+    backgroundColor: "#fff",
+    alignItems: "center",
+    justifyContent: "center",
   },
 });
 ```
@@ -182,18 +182,18 @@ export default function SignUpScreen() {
         </View>
       )}
       {pendingVerification && (
+        <View>
           <View>
-            <View>
-              <TextInput
-                value={code}
-                placeholder="Code..."
-                onChangeText={(code) => setCode(code)}
-              />
-            </View>
-            <TouchableOpacity onPress={onPressVerify}>
-              <Text>Verify Email</Text>
-            </TouchableOpacity>
+            <TextInput
+              value={code}
+              placeholder="Code..."
+              onChangeText={(code) => setCode(code)}
+            />
           </View>
+          <TouchableOpacity onPress={onPressVerify}>
+            <Text>Verify Email</Text>
+          </TouchableOpacity>
+        </View>
       )}
     </View>
   );
@@ -207,7 +207,7 @@ import React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignIn } from "@clerk/clerk-expo";
 
-export default function SignInScreen(){
+export default function SignInScreen() {
   const { signIn, setSession, isLoaded } = useSignIn();
 
   const [emailAddress, setEmailAddress] = React.useState("");
@@ -224,9 +224,9 @@ export default function SignInScreen(){
         password,
       });
       // This is an important step, otherwise Clerk will assume that the user is not signed in.
-      await setActive({session: completeSignIn.createdSessionId});
+      await setActive({ session: completeSignIn.createdSessionId });
     } catch (err: any) {
-        console.log(err)
+      console.log(err);
     }
   };
   return (
@@ -240,7 +240,7 @@ export default function SignInScreen(){
         />
       </View>
 
-      <View >
+      <View>
         <TextInput
           value={password}
           style={styles.textInput}
@@ -251,7 +251,7 @@ export default function SignInScreen(){
       </View>
 
       <TouchableOpacity onPress={onSignInPress}>
-        <Text >Sign in</Text>
+        <Text>Sign in</Text>
       </TouchableOpacity>
     </View>
   );
@@ -262,19 +262,19 @@ Make sure you update your `app` file to use the components that you have created
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { SafeAreaView, Text,StyleSheet } from "react-native";
-import { ClerkProvider,SignedIn,SignedOut } from "@clerk/clerk-expo";
+import { SafeAreaView, Text, StyleSheet } from "react-native";
+import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import SignInScreen from ".components/sign-in";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-        <SafeAreaView styles={styles.container}>
+      <SafeAreaView styles={styles.container}>
         <SignedIn>
-        <Text>You are Signed in</Text>
+          <Text>You are Signed in</Text>
         </SignedIn>
         <SignedOut>
-          <SignIn/>
+          <SignIn />
         </SignedOut>
       </SafeAreaView>
     </ClerkProvider>
@@ -283,9 +283,9 @@ export default function App() {
 const styles = StyleSheet.create({
   container: {
     flex: 1,
-    backgroundColor: '#fff',
-    alignItems: 'center',
-    justifyContent: 'center',
+    backgroundColor: "#fff",
+    alignItems: "center",
+    justifyContent: "center",
   },
 });
 ```
@@ -295,7 +295,8 @@ const styles = StyleSheet.create({
 If you want to add OAuth login flows to you Expo application, in most cases you want to be able to handle both sign in and sign up in a single flow. With Clerk we make this possible with transfers.
 
 <Callout type="info">
-We are using `expo-auth-session` for session handling for this example. Please make sure it's installed before using the below code.
+  We are using `expo-auth-session` for session handling for this example. Please
+  make sure it's installed before using the below code.
 </Callout>
 
 ```tsx filename="SignInWithOauth" copy
@@ -360,7 +361,7 @@ const SignInWithOAuth = () => {
         }
 
         console.log(
-          "Didn't have an account transferring, following through with new account sign up",
+          "Didn't have an account transferring, following through with new account sign up"
         );
 
         // Create user
@@ -398,10 +399,12 @@ A token cache is important for persisting your JWT by default Clerk holds it in 
 ```bash copy
 npx expo install expo-secure-store
 ```
-----
+
+---
+
 ```tsx filename="app.tsx" copy
-import React from "react"
-import { SafeAreaView, Text,StyleSheet } from "react-native";
+import React from "react";
+import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import * as SecureStore from "expo-secure-store";
 
@@ -409,42 +412,43 @@ const tokenCache = {
   getToken(key: string) {
     try {
       return SecureStore.getItemAsync(key);
-    }
-    catch (err) {
+    } catch (err) {
       return null;
     }
   },
   saveToken(key: string, value: string) {
     try {
       return SecureStore.setItemAsync(key, value);
-    }
-    catch (err) {
+    } catch (err) {
       return null;
     }
-  }
+  },
 };
 
 export default function App() {
   return (
-    <ClerkProvider tokenCache={tokenCache} publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-    <SafeAreaView styles={styles.container}>
-    <SignedIn>
-      <Text>You are Signed in</Text>
-    </SignedIn>
-    <SignedOut>
-      <SignIn/>
-    </SignedOut>
-  </SafeAreaView>
-</ClerkProvider>
-);
+    <ClerkProvider
+      tokenCache={tokenCache}
+      publishableKey="pk_test_••••••••••••••••••••••••••••••••••"
+    >
+      <SafeAreaView styles={styles.container}>
+        <SignedIn>
+          <Text>You are Signed in</Text>
+        </SignedIn>
+        <SignedOut>
+          <SignIn />
+        </SignedOut>
+      </SafeAreaView>
+    </ClerkProvider>
+  );
 }
 
 const styles = StyleSheet.create({
   container: {
-  flex: 1,
-  backgroundColor: '#fff',
-  alignItems: 'center',
-  justifyContent: 'center',
+    flex: 1,
+    backgroundColor: "#fff",
+    alignItems: "center",
+    justifyContent: "center",
   },
 });
 ```
@@ -457,10 +461,10 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-  ```tsx copy filename="pages/example.tsx"
-  import { useAuth } from '@clerk/clerk-expo';
+```tsx copy filename="pages/example.tsx"
+import { useAuth } from "@clerk/clerk-expo";
 
-  export default function Example() {
+export default function Example() {
   const { isLoaded, userId, sessionId, getToken } = useAuth();
 
   // In case the user signs out while on the page.
@@ -468,29 +472,33 @@ The `useAuth` hook is a convenient way to access the current auth state. This ho
     return null;
   }
 
-  return <div>Hello, {userId} your current active session is {sessionId}</div>;
-  };
-  ```
+  return (
+    <div>
+      Hello, {userId} your current active session is {sessionId}
+    </div>
+  );
+}
+```
 
 #### `useUser`
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ```tsx copy filename="pages/example.tsx"
-import { useUser } from '@clerk/clerk-expo';
+import { useUser } from "@clerk/clerk-expo";
 
-  export default function Example() {
-  const { isLoaded, isSignedIn, user } = useUser()
+export default function Example() {
+  const { isLoaded, isSignedIn, user } = useUser();
 
   if (!isLoaded || !isSignedIn) {
-    return null
+    return null;
   }
 
   return <div>Hello, {user.firstName} welcome to Clerk</div>;
-  };
+}
 
-export default Example
-````
+export default Example;
+```
 
 ## Next Steps
 
