--- a/src/pages/sdk/next/build-clerk-props.mdx
+++ b/src/pages/sdk/next/build-clerk-props.mdx
@@ -1,29 +1,29 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `buildClerkProps`
 
 Clerk uses `buildClerkProps` to inform the client side helpers of the authentication state of the user. This function is used SSR in the `getServerSideProps` function of your Next.js application.
 
-## Usage 
+## Usage
 
 #### Basic Usage
 
 ```tsx filename="pages/myServerSidePage" copy
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps } from 'next'
- 
-export const getServerSideProps: GetServerSideProps = async ctx => {
-  const { userId} = getAuth(ctx.req)
-  
+import { GetServerSideProps } from "next";
+
+export const getServerSideProps: GetServerSideProps = async (ctx) => {
+  const { userId } = getAuth(ctx.req);
+
   if (!userId) {
     // handle user is not logged in.
   }
- 
+
   // Load any data your application needs for the page using the userId
-  return { props: { ...buildClerkProps(ctx.req) } }
-}
+  return { props: { ...buildClerkProps(ctx.req) } };
+};
 ```
 
 #### Protecting pages using SSR
@@ -32,15 +32,15 @@ It is important to protect your API routes to ensure that only authenticated use
 
 ```tsx filename="pages/api/example.ts" copy
 import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps } from 'next'
- 
-export const getServerSideProps: GetServerSideProps = async ctx => {
-  const { userId } = getAuth(ctx.req)
-  
+import { GetServerSideProps } from "next";
+
+export const getServerSideProps: GetServerSideProps = async (ctx) => {
+  const { userId } = getAuth(ctx.req);
+
   const user = userId ? await clerkClient.users.getUser(userId) : undefined;
-  
-  return { props: { ...buildClerkProps(ctx.req, { user }) } }
-}
+
+  return { props: { ...buildClerkProps(ctx.req, { user }) } };
+};
 ```
 
 #### Usage with `clerkClient`
@@ -49,13 +49,13 @@ The `clerkClient` allows you to access the Clerk API. You can use this to retrie
 
 ```tsx filename="pages/api/example.ts" copy
 import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps } from 'next'
- 
-export const getServerSideProps: GetServerSideProps = async ctx => {
-  const { userId } = getAuth(ctx.req)
-  
+import { GetServerSideProps } from "next";
+
+export const getServerSideProps: GetServerSideProps = async (ctx) => {
+  const { userId } = getAuth(ctx.req);
+
   const user = userId ? await clerkClient.users.getUser(userId) : undefined;
-  
-  return { props: { ...buildClerkProps(ctx.req, { user }) } }
-}
+
+  return { props: { ...buildClerkProps(ctx.req, { user }) } };
+};
 ```
