--- a/src/pages/sdk/next/get-auth.mdx
+++ b/src/pages/sdk/next/get-auth.mdx
@@ -1,24 +1,27 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `getAuth()`
 
 The `getAuth()` helper retrieves the authentication state allowing you to protect your API routes or gather relevant data.
 
-## Usage 
+## Usage
 
 #### Basic Usage
 
 ```tsx filename="pages/api/example.ts" copy
 import { getAuth } from "@clerk/nextjs/server";
-import type { NextApiRequest, NextApiResponse } from 'next'
+import type { NextApiRequest, NextApiResponse } from "next";
 
-export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
   const { userId } = getAuth(req);
-    // Load any data your application needs for the API route
-  return res.status(200).json({"userId" : userId})
-};
+  // Load any data your application needs for the API route
+  return res.status(200).json({ userId: userId });
+}
 ```
 
 #### Protecting API Routes
@@ -27,16 +30,19 @@ It is important to protect your API routes to ensure that only authenticated use
 
 ```tsx filename="pages/api/example.ts" copy
 import { getAuth } from "@clerk/nextjs/server";
-import type { NextApiRequest, NextApiResponse } from 'next'
+import type { NextApiRequest, NextApiResponse } from "next";
 
-export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
   const { userId } = getAuth(req);
   if (!userId) {
-    return res.status(401).json({error: "Not authenticated"})
+    return res.status(401).json({ error: "Not authenticated" });
   }
-    // Load any data your application needs for the API route
-  return res.status(200).json({"userId" : userId})
-};
+  // Load any data your application needs for the API route
+  return res.status(200).json({ userId: userId });
+}
 ```
 
 #### Usage with `getToken`
@@ -45,16 +51,18 @@ The `getToken()` function returns a promise that resolves to the current user's 
 
 ```tsx filename="pages/api/example.ts" copy
 import { getAuth } from "@clerk/nextjs/server";
-import type { NextApiRequest, NextApiResponse } from 'next'
+import type { NextApiRequest, NextApiResponse } from "next";
 
-export default async function handler(req: NextApiRequest, res: NextApiResponse) {
-  const { getToken} = getAuth(req);
-  const token = await getToken({template: "supabase"});
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
+  const { getToken } = getAuth(req);
+  const token = await getToken({ template: "supabase" });
   // Retrieve the data from your database
-  return res.status(200).json({data})
-};
+  return res.status(200).json({ data });
+}
 ```
-
 
 #### Usage with `clerkClient`
 
@@ -62,44 +70,59 @@ The `clerkClient` allows you to access the Clerk API. You can use this to retrie
 
 ```tsx filename="pages/api/example.ts" copy
 import { getAuth, clerkClient } from "@clerk/nextjs/server";
-import type { NextApiRequest, NextApiResponse } from 'next'
+import type { NextApiRequest, NextApiResponse } from "next";
 
-export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
   const { userId } = getAuth(req);
   const user = userId ? await clerkClient.users.getUser(userId) : null;
-  return res.status(200).json({data})
-};
+  return res.status(200).json({ data });
+}
 ```
 
-<Tables headings={["Variables", "Description"]} rows={[
+<Tables
+  headings={["Variables", "Description"]}
+  rows={[
     {
-      cells: ["actor", "Holds identifier for the user that is impersonating the current user"]
+      cells: [
+        "actor",
+        "Holds identifier for the user that is impersonating the current user",
+      ],
     },
     {
-      cells: ["debug", "Used to help debug issues when using Clerk in development"]
+      cells: [
+        "debug",
+        "Used to help debug issues when using Clerk in development",
+      ],
     },
     {
-      cells: ["getToken", "A function that returns a promise that resolves to the current user's session token, can also be used to retrieve a custom JWT template"]
+      cells: [
+        "getToken",
+        "A function that returns a promise that resolves to the current user's session token, can also be used to retrieve a custom JWT template",
+      ],
     },
     {
-      cells: ["orgId", "The current user's organization ID"]
+      cells: ["orgId", "The current user's organization ID"],
     },
     {
-      cells: ["orgRole", "The current user's organization role"]
+      cells: ["orgRole", "The current user's organization role"],
     },
     {
-      cells: ["orgSlug", "The current user's organization slug"]
+      cells: ["orgSlug", "The current user's organization slug"],
     },
     {
-      cells: ["organization", "The current user's organization object"]
+      cells: ["organization", "The current user's organization object"],
     },
     {
-      cells: ["sessionClaim", " The current user's session claim"]
+      cells: ["sessionClaim", " The current user's session claim"],
     },
     {
-      cells: ["sessionId", "The current user's session ID"]
+      cells: ["sessionId", "The current user's session ID"],
     },
     {
-      cells: ["userId", "The current user's unique identifier"]
+      cells: ["userId", "The current user's unique identifier"],
     },
-  ]} />
+  ]}
+/>
