--- a/src/pages/sdk/next/with-clerk-middleware.mdx
+++ b/src/pages/sdk/next/with-clerk-middleware.mdx
@@ -1,12 +1,12 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `withClerkMiddleware`
 
 The `withClerkMiddleware` wrapper allows Clerk to access session data on the server side allowing you to use any of our server side helpers without any additonal network calls.
 
-## Usage 
+## Usage
 
 #### Basic Usage
 
@@ -15,14 +15,16 @@ This is the minimal amount of code needed to use Clerk Server Side helpers.
 ```tsx filename="middeware.ts" copy
 import { withClerkMiddleware } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
-import type { NextRequest } from 'next/server'
+import type { NextRequest } from "next/server";
 
 export default withClerkMiddleware((req: NextRequest) => {
   return NextResponse.next();
 });
 
 // Stop Middleware running on static files
-export const config = { matcher:  '/((?!_next/image|_next/static|favicon.ico).*)'};
+export const config = {
+  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
+};
 ```
 
 #### Usage with page protection
@@ -58,5 +60,7 @@ export default withClerkMiddleware((request: NextRequest) => {
   return NextResponse.next();
 });
 
-export const config = { matcher:  '/((?!_next/image|_next/static|favicon.ico).*)'};
+export const config = {
+  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
+};
 ```
