--- a/src/pages/components/authentication/sign-in-with-meta.mdx
+++ b/src/pages/components/authentication/sign-in-with-meta.mdx
@@ -1,6 +1,6 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `<SignInWithMetamaskButton />`
 
@@ -24,22 +24,21 @@ export default function Home() {
 ```
 You can also overide the default button with your own button and text.
 
-``` jsx copy filename="pages/index.js"
+```jsx copy filename="pages/index.js"
 import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
+      <h1> Sign in </h1>
       <SignInWithMetamaskButton mode="modal">
-        <button className="btn">
-          Sign in
-        </button>
+        <button className="btn">Sign in</button>
       </SignInWithMetamaskButton>
     </div>
   );
 }
 ```
+
 </Tab>
 <Tab>
 ```jsx copy filename="example.js"
@@ -134,4 +133,6 @@ export default function Home() {
 }
 ```
 </Tab>
-</Tabs>
+</Tabs
+
+>
