--- a/src/pages/components/authentication/sign-up.mdx
+++ b/src/pages/components/authentication/sign-up.mdx
@@ -1,12 +1,18 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
-import {Images} from '@/components/Images'
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
 
 # `<SignUp />`
+
 ---
 
-<Images width={496} height={780} src="/images/ui-components/component-sign_up.svg" alt="Sign up component example"/>
+<Images
+  width={496}
+  height={780}
+  src="/images/ui-components/component-sign_up.svg"
+  alt="Sign up component example"
+/>
 
 The `<SignUp/>` component renders a UI for signing up users. The functionality of the `<SignUp/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignUp/>` component by passing additional properties at the time of rendering.
 
@@ -21,9 +27,10 @@ Below is basic implementation of the `<SignUp/>` component. You can use this as 
 import { SignUp } from "@clerk/nextjs";
 
 const SignInPage = () => (
-  <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
-);
-export default SignInPage;
+
+<SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
+); 
+export default SignInPage; 
 ```
 
 </Tab>
@@ -36,6 +43,7 @@ function SignInPage() {
   return <SignUp />;
 }
 ```
+
 </Tab>
 <Tab>
 ```jsx copy filename="app/routes/sign-up/$.tsx"
@@ -75,28 +83,54 @@ window.Clerk.openSignUp();
 </Tab>
 </Tabs>
 
-
 ## Props
 
 All props below are optional.
 
-<Tables headings={["Name", "Type", "Description"]} rows={[
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
     {
-      cells: ["routing", "string",  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`]
+      cells: [
+        "routing",
+        "string",
+        `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
+      ],
     },
     {
-      cells: ["path", "string",  "The path where the component is mounted on when path-based routing is used e.g. /sign-in."]
+      cells: [
+        "path",
+        "string",
+        "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
+      ],
     },
     {
-      cells: ["redirectUrl", "string",  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
+      cells: [
+        "redirectUrl",
+        "string",
+        "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+      ],
     },
     {
-      cells: ["afterSignInUrl", "string",  "The full URL or path to navigate after a successful sign in."]
+      cells: [
+        "afterSignInUrl",
+        "string",
+        "The full URL or path to navigate after a successful sign in.",
+      ],
     },
-     {
-      cells: ["signInUrl", "string",  "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered."]
+    {
+      cells: [
+        "signInUrl",
+        "string",
+        "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.",
+      ],
     },
-     {
-      cells: ["afterSignUpUrl", "string", "The full URL or path to navigate after a successful sign up."]
+    {
+      cells: [
+        "afterSignUpUrl",
+        "string",
+        "The full URL or path to navigate after a successful sign up.",
+      ],
     },
-  ]} />
+  ]}
+/>
