--- a/src/pages/components/authentication/user-button.mdx
+++ b/src/pages/components/authentication/user-button.mdx
@@ -1,15 +1,22 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
-import {Images} from '@/components/Images'
+import { Images } from "@/components/Images";
 
 # `<UserButton />`
 
 ---
-<Images width={496} height={564} src="/images/ui-components/component-user_button.svg" alt="User Button Example"/>
+
+<Images
+  width={496}
+  height={564}
+  src="/images/ui-components/component-user_button.svg"
+  alt="User Button Example"
+/>
 
 The `<UserButton/>` component is used to render the familiar user button UI popularized by Google.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="userButtonExample.tsx"
@@ -22,10 +29,8 @@ import {
 } from "@clerk/nextjs";
 
 function Header() {
-  return (
-    <header
-      style={{ display: "flex", justifyContent: "space-between", padding: 20 }}
-    >
+return (
+    <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
       <h1>My App</h1>
       <SignedIn>
         {/* Mount the UserButton component */}
@@ -35,8 +40,8 @@ function Header() {
         {/* Signed out users get sign in button */}
         <SignInButton />
       </SignedOut>
-    </header>
-  );
+    </header> 
+);
 }
 
 function MyApp({ pageProps }) {
@@ -91,11 +96,11 @@ function ClerkProviderWithRoutes() {
         <Routes>
           <Route path="/" element={<PublicPage />} />
           <Route
-          path="/sign-in/_"
+          path="/sign-in/*"
           element={<SignIn routing="path" path="/sign-in" />}
           />
           <Route
-          path="/sign-up/_"
+          path="/sign-up/*"
           element={<SignUp routing="path" path="/sign-up" />}
           />
           <Route
@@ -118,6 +123,7 @@ function App() {
     </BrowserRouter>
   );
 }
+
 ```
 </Tab>
 </Tabs>
@@ -188,3 +194,4 @@ function App() {
     },
   ]}
 />
+```
