--- a/src/pages/components/organization-management/create-organization.mdx
+++ b/src/pages/components/organization-management/create-organization.mdx
@@ -1,15 +1,22 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
-import {Images} from "@/components/Images";
+import { Images } from "@/components/Images";
 
 # `<CreateOrganization />`
 
 ---
 
-<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg"/>
-The `<CreateOrganization/>` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
+<Images
+  alt="Organization Switcher Example"
+  width={992}
+  height={568}
+  src="/images/ui-components/component-org_switcher.svg"
+/>
+The `<CreateOrganization />` component is used to render an organization creation
+UI that allows users to create brand new organizations within you application.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="/pages/create-organization/[[...index]].tsx"
