--- a/src/pages/components/organization-management/organization-profile.mdx
+++ b/src/pages/components/organization-management/organization-profile.mdx
@@ -1,15 +1,24 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
-import {Images} from "@/components/Images";
+import { Images } from "@/components/Images";
 
 # `<OrganizationProfile />`
 
 ---
 
-<Images alt="Organization Profile Example" width={1024} height={548} src="/images/ui-components/component-org_profile.svg"/>
-The `<OrganizationProfile/>` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+<Images
+  alt="Organization Profile Example"
+  width={1024}
+  height={548}
+  src="/images/ui-components/component-org_profile.svg"
+/>
+The `
+<OrganizationProfile />
+` component is used to render a beautiful, full-featured organization management
+UI that allows users to manage their organization profile and security settings.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
