--- a/src/pages/components/organization-management/organization-switcher.mdx
+++ b/src/pages/components/organization-management/organization-switcher.mdx
@@ -1,15 +1,22 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
-import {Images} from "@/components/Images";
+import { Images } from "@/components/Images";
 
 # `<OrganizationSwitcher />`
 
 ---
 
-<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg"/>
-The `<OrganizationSwitcher/>` component is used to enable the ability to switch between available organizations the user may be part of in your application.
+<Images
+  alt="Organization Switcher Example"
+  width={992}
+  height={568}
+  src="/images/ui-components/component-org_switcher.svg"
+/>
+The `<OrganizationSwitcher />` component is used to enable the ability to switch
+between available organizations the user may be part of in your application.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
