--- a/src/pages/hooks/user-management/use-session-list.mdx
+++ b/src/pages/hooks/user-management/use-session-list.mdx
@@ -1,12 +1,12 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # useSessionList
 
 The `useSessionList` hook provides returns an array of Session objects that have been registered on the client device.
 
-## Usage 
+## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
@@ -53,18 +53,32 @@ export default function Home() {
 </Tab>
 </Tabs>
 
-
-<Tables headings={["Variables", "Description"]} rows={[
+<Tables
+  headings={["Variables", "Description"]}
+  rows={[
     {
-      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
+      cells: [
+        "isLoaded",
+        "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true",
+      ],
     },
     {
-      cells: ["setActive", "A function that sets the active session, is most cases this should be used over setSession()"]
+      cells: [
+        "setActive",
+        "A function that sets the active session, is most cases this should be used over setSession()",
+      ],
     },
     {
-      cells: ["setSession", "A function that sets the active session, this should"]
+      cells: [
+        "setSession",
+        "A function that sets the active session, this should",
+      ],
     },
     {
-      cells: ["sessions", "Holds an array of Session objects that have been registered on the client device"]
+      cells: [
+        "sessions",
+        "Holds an array of Session objects that have been registered on the client device",
+      ],
     },
-  ]} />
+  ]}
+/>
