--- a/src/pages/sdk/shared/use-clerk.mdx
+++ b/src/pages/sdk/shared/use-clerk.mdx
@@ -1,16 +1,17 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # useClerk
 
 The `useClerk` hook provides access to the the Clerk object, giving you the ability to build alternatives to any Clerk Component.
 
 <Callout type="warning">
-This is intended to be used for advanced use cases, like building a completely custom oauth flow or as an escape hatch giving access to lower-level APIs.
+  This is intended to be used for advanced use cases, like building a completely
+  custom oauth flow or as an escape hatch giving access to lower-level APIs.
 </Callout>
 
-## Usage 
+## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
@@ -20,8 +21,9 @@ import { useClerk } from "@clerk/nextjs";
 export default function Home() {
   const clerk = useClerk();
 
-  return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
+return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
 }
+
 ```
 </Tab>
 <Tab>
@@ -34,5 +36,6 @@ export default function Home() {
   return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
 }
 ```
+
 </Tab>
 </Tabs>
