--- a/src/pages/sdk/shared/use-sign-up.mdx
+++ b/src/pages/sdk/shared/use-sign-up.mdx
@@ -1,13 +1,13 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `useSignUp`
 
-The `useSignUp` hook gives you access to the SignUp object, which allows you to check the current state of a sign up and sign up users with custom flows. 
-
+The `useSignUp` hook gives you access to the SignUp object, which allows you to check the current state of a sign up and sign up users with custom flows.
 
 ## Usage
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 #### Check the current sign up status
@@ -22,13 +22,8 @@ export default function SignUpStep() {
     // handle loading state
     return null;
   }
-  
-  return (
-    <div>
-      The current sign up attempt status 
-      is {signUp.status}.
-    </div>
-  );
+
+  return <div>The current sign up attempt status is {signUp.status}.</div>;
 }
 ```
 
@@ -39,44 +34,44 @@ import { useSignUp } from "@clerk/nextjs";
 import { useState } from "react";
 
 export default function SignUp() {
-  const [emailAddress, setEmailAddress] = useState('');
-  const [password, setPassword] = useState('');
-  
+  const [emailAddress, setEmailAddress] = useState("");
+  const [password, setPassword] = useState("");
+
   const { isLoaded, signUp } = useSignUp();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
   }
-  
+
   async function submit(e) {
     e.preventDefault();
-    // Check the sign up response to 
+    // Check the sign up response to
     // decide what to do next.
-    await signUp.create({
-      emailAddress,
-      password,
-    })
-    .then((result) => {
+    await signUp
+      .create({
+        emailAddress,
+        password,
+      })
+      .then((result) => {
         if (result.status === "complete") {
-            console.log(result);
-            setActive({session: result.createdSessionId});
-        }
-        else{
-            console.log(result);
+          console.log(result);
+          setActive({ session: result.createdSessionId });
+        } else {
+          console.log(result);
         }
       })
       .catch((err) => console.error("error", err.errors[0].longMessage));
   }
-  
+
   return (
     <form onSubmit={submit}>
       <div>
         <label htmlFor="email">Email</label>
-        <input 
-          type="email" 
-          value={emailAddress} 
-          onChange={e => setEmailAddress(e.target.value)} 
+        <input
+          type="email"
+          value={emailAddress}
+          onChange={(e) => setEmailAddress(e.target.value)}
         />
       </div>
       <div>
@@ -84,7 +79,7 @@ export default function SignUp() {
         <input
           type="password"
           value={password}
-          onChange={e => setPassword(e.target.value)}
+          onChange={(e) => setPassword(e.target.value)}
         />
       </div>
       <div>
@@ -94,6 +89,7 @@ export default function SignUp() {
   );
 }
 ```
+
 </Tab>
 <Tab>
 #### Check the current sign up status
@@ -108,13 +104,8 @@ export default function SignUpStep() {
     // handle loading state
     return null;
   }
-  
-  return (
-    <div>
-      The current sign up attempt status 
-      is {signUp.status}.
-    </div>
-  );
+
+  return <div>The current sign up attempt status is {signUp.status}.</div>;
 }
 ```
 
@@ -125,44 +116,44 @@ import { useSignUp } from "@clerk/clerk-react";
 import { useState } from "react";
 
 export default function SignUp() {
-  const [emailAddress, setEmailAddress] = useState('');
-  const [password, setPassword] = useState('');
-  
+  const [emailAddress, setEmailAddress] = useState("");
+  const [password, setPassword] = useState("");
+
   const { isLoaded, signUp } = useSignUp();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
   }
-  
+
   async function submit(e) {
     e.preventDefault();
-    // Check the sign up response to 
+    // Check the sign up response to
     // decide what to do next.
-    await signUp.create({
-      emailAddress,
-      password,
-    })
-    .then((result) => {
+    await signUp
+      .create({
+        emailAddress,
+        password,
+      })
+      .then((result) => {
         if (result.status === "complete") {
-            console.log(result);
-            setActive({session: result.createdSessionId});
-        }
-        else{
-            console.log(result);
+          console.log(result);
+          setActive({ session: result.createdSessionId });
+        } else {
+          console.log(result);
         }
       })
       .catch((err) => console.error("error", err.errors[0].longMessage));
   }
-  
+
   return (
     <form onSubmit={submit}>
       <div>
         <label htmlFor="email">Email</label>
-        <input 
-          type="email" 
-          value={emailAddress} 
-          onChange={e => setEmailAddress(e.target.value)} 
+        <input
+          type="email"
+          value={emailAddress}
+          onChange={(e) => setEmailAddress(e.target.value)}
         />
       </div>
       <div>
@@ -170,7 +161,7 @@ export default function SignUp() {
         <input
           type="password"
           value={password}
-          onChange={e => setPassword(e.target.value)}
+          onChange={(e) => setPassword(e.target.value)}
         />
       </div>
       <div>
@@ -180,6 +171,7 @@ export default function SignUp() {
   );
 }
 ```
+
 </Tab>
 </Tabs>
 <Tables headings={["Variables", "Description"]} rows={[
