--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -38,16 +38,27 @@ Clerk requires your Expo application to be wrapped in the `<ClerkProvider/>` com
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { Text } from "react-native";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <SafeAreaView style={styles.container}>
         <Text>Hello world!</Text>
+      </SafeAreaView>
     </ClerkProvider>
   );
 }
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 ## Protecting Your Pages
@@ -55,19 +66,31 @@ export default function App() {
 Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out)  control components.
 
 ```tsx filename="app.tsx" copy
-import { Text } from "react-native";
+import React from "react";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+     <SafeAreaView style={styles.container}>
       <SignedIn>
         <Text>You are Signed in</Text>
       </SignedIn>
       <SignedOut>You are Signed out</SignedOut>
+      </SafeAreaView>
     </ClerkProvider>
   );
 }
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 Using expo requires you to create custom flows in our quickstart guide, we are going to show you how to create a sign in and sign up flow using the `useSignIn` and `useSignUp` hooks.
@@ -236,14 +259,15 @@ export default function SignInScreen(){
 Make sure you update your `app` file to use the components that you have created, to keep it simple we will just add the SignIn.
 
 ```tsx filename="app.tsx" copy
-import { SafeAreaView, Text } from "react-native";
+import React from "react";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider,SignedIn,SignedOut } from "@clerk/clerk-expo";
 import SignInScreen from ".components/sign-in";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-        <SafeAreaView>
+        <SafeAreaView styles={styles.container}>
         <SignedIn>
         <Text>You are Signed in</Text>
         </SignedIn>
@@ -254,6 +278,14 @@ export default function App() {
     </ClerkProvider>
   );
 }
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 ## OAuth Login
@@ -366,7 +398,8 @@ npx expo install expo-secure-store
 ```
 ----
 ```tsx filename="app.tsx" copy
-import { Text } from "react-native";
+import React from "react"
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import * as SecureStore from "expo-secure-store";
 
@@ -392,13 +425,26 @@ const tokenCache = {
 export default function App() {
   return (
     <ClerkProvider tokenCache={tokenCache} publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SignedIn>
-        <Text>You are Signed in</Text>
-      </SignedIn>
-      <SignedOut>You are Signed out</SignedOut>
-    </ClerkProvider>
-  );
+    <SafeAreaView styles={styles.container}>
+    <SignedIn>
+      <Text>You are Signed in</Text>
+    </SignedIn>
+    <SignedOut>
+      <SignIn/>
+    </SignedOut>
+  </SafeAreaView>
+</ClerkProvider>
+);
 }
+
+const styles = StyleSheet.create({
+  container: {
+  flex: 1,
+  backgroundColor: '#fff',
+  alignItems: 'center',
+  justifyContent: 'center',
+  },
+});
 ```
 
 ## Accessing Auth Data
